Fix overflow issue

--- a/assets/scss/_predefined.scss
+++ b/assets/scss/_predefined.scss
@@ -11,7 +11,6 @@ $mono-fonts: Consolas, Menlo, Monaco, "Lucida Console", "Lucida Sans Typewriter"
 //
 @mixin stylized-link {
   a {
-    word-wrap: break-word;
     text-decoration: none;
     border: none;
     box-shadow: inset 0 -4px 0 $accent;
